--- a/cart.html
+++ b/cart.html
@@ -5,13 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>购物车</title>
     <script type="module">
-        // 🔥 Firebase 配置
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
-        import { getFirestore, collection, getDocs, addDoc, deleteDoc, doc, query, orderBy, limit } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
-        import { getAuth, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-auth.js";
-        import { jsPDF } from "https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js";
+        // Firebase 配置
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
+        import { getFirestore, collection, getDocs, doc, deleteDoc, addDoc } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js";
+        import { getAuth, signOut } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js";
 
-        // 🔥 Firebase 配置
         const firebaseConfig = {
             apiKey: "AIzaSyCh7tgqEZb1zLICy6trriTCMJlXEe0x6hM",
             authDomain: "shop-87351.firebaseapp.com",
@@ -21,165 +19,138 @@
             appId: "1:994764608061:web:e7a5a041cd3e082daad054"
         };
 
-        // 🔥 初始化 Firebase
+        // 初始化 Firebase
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
-        const auth = getAuth(app);
+        const auth = getAuth();
 
-        let currentUser = null; // 存储当前登录用户信息
-
-        // ✅ 监听用户登录状态
-        onAuthStateChanged(auth, async (user) => {
-            if (user) {
-                currentUser = user;
-                loadCart(); // 用户登录后加载购物车
-            } else {
-                window.location.href = "login.html"; // 未登录跳转
-            }
-        });
-
-        // ✅ 加载购物车数据
+        // 获取购物车数据
         async function loadCart() {
-            if (!currentUser) return;
             const cartBody = document.getElementById("cart-body");
-            const cartTotalElem = document.getElementById("cart-total");
+            const cartTotal = document.getElementById("cart-total");
             cartBody.innerHTML = "";
             let total = 0;
 
-            const itemsSnapshot = await getDocs(collection(db, "carts", currentUser.uid, "items"));
-            let cartItems = [];
-
-            itemsSnapshot.forEach((docSnap) => {
-                const item = { id: docSnap.id, ...docSnap.data() };
-                cartItems.push(item);
-            });
-
-            cartItems.forEach((item) => {
-                const price = parseFloat(item.price) || 0;
-                const quantity = item.quantity || 1;
-                const itemTotal = price * quantity;
+            const querySnapshot = await getDocs(collection(db, "cart"));
+            querySnapshot.forEach((doc) => {
+                const item = doc.data();
+                const row = document.createElement("tr");
+                const itemTotal = item.price * item.quantity;
                 total += itemTotal;
 
-                const row = document.createElement("tr");
                 row.innerHTML = `
                     <td>${item.name}</td>
-                    <td>¥${price.toFixed(2)}</td>
-                    <td>${quantity}</td>
+                    <td>¥${item.price.toFixed(2)}</td>
+                    <td>${item.quantity}</td>
                     <td>¥${itemTotal.toFixed(2)}</td>
-                    <td><button class="remove-btn" data-id="${item.id}">❌ 删除</button></td>
+                    <td><button onclick="removeItem('${doc.id}')">删除</button></td>
                 `;
                 cartBody.appendChild(row);
             });
 
-            cartTotalElem.textContent = total.toFixed(2);
+            cartTotal.textContent = total.toFixed(2);
         }
 
-        // ✅ 删除购物车商品
-        async function deleteCartItem(itemId) {
-            if (!currentUser) return;
-            await deleteDoc(doc(db, "carts", currentUser.uid, "items", itemId));
+        // 删除购物车商品
+        async function removeItem(id) {
+            await deleteDoc(doc(db, "cart", id));
             loadCart();
         }
 
-        // ✅ 监听删除按钮点击
-        document.getElementById("cart-body").addEventListener("click", (e) => {
-            if (e.target.classList.contains("remove-btn")) {
-                const itemId = e.target.getAttribute("data-id");
-                deleteCartItem(itemId);
-            }
-        });
-
-        // ✅ 生成订单号
-        async function generateNextOrderNumber() {
-            const ordersRef = collection(db, "orders");
-            const q = query(ordersRef, orderBy("orderNumber", "desc"), limit(1));
-            const querySnapshot = await getDocs(q);
-            let newOrderNumber;
-
-            if (querySnapshot.empty) {
-                newOrderNumber = "A001";
-            } else {
-                const lastOrder = querySnapshot.docs[0].data();
-                const lastOrderNumber = lastOrder.orderNumber;
-                const letter = lastOrderNumber.charAt(0);
-                const num = parseInt(lastOrderNumber.slice(1));
-                if (num < 999) {
-                    newOrderNumber = letter + String(num + 1).padStart(3, "0");
-                } else {
-                    const nextLetter = String.fromCharCode(letter.charCodeAt(0) + 1);
-                    newOrderNumber = nextLetter + "001";
+        // 结算功能
+        document.addEventListener("DOMContentLoaded", function () {
+            document.getElementById("checkout-btn").addEventListener("click", async function () {
+                const cartItems = await getDocs(collection(db, "cart"));
+                if (cartItems.empty) {
+                    alert("购物车为空，无法结算！");
+                    return;
                 }
-            }
-            return newOrderNumber;
-        }
 
-        // ✅ 结算功能
-        document.getElementById("checkout-btn").addEventListener("click", async () => {
-            if (!currentUser) return;
-            const total = document.getElementById("cart-total").textContent;
-            const orderTime = new Date().toISOString();
-            const newOrderNumber = await generateNextOrderNumber();
+                // 将购物车数据保存到 "orders" 集合中
+                cartItems.forEach(async (item) => {
+                    await addDoc(collection(db, "orders"), item.data());
+                    await deleteDoc(doc(db, "cart", item.id)); // 结算后清空购物车
+                });
 
-            // 获取购物车商品
-            const itemsSnapshot = await getDocs(collection(db, "carts", currentUser.uid, "items"));
-            let cartItems = [];
-            itemsSnapshot.forEach((docSnap) => {
-                cartItems.push({ id: docSnap.id, ...docSnap.data() });
+                alert("结算成功！订单已生成！");
+                loadCart(); // 重新加载购物车
             });
 
-            if (cartItems.length === 0) {
-                alert("购物车为空，无法结算！");
-                return;
-            }
-
-            const orderData = {
-                orderNumber: newOrderNumber,
-                userId: currentUser.uid,
-                items: cartItems,
-                total: total,
-                orderTime: orderTime
-            };
-
-            try {
-                await addDoc(collection(db, "orders"), orderData);
-
-                // ✅ 生成 PDF 订单
-                const docPDF = new jsPDF();
-                docPDF.setFontSize(16);
-                docPDF.text("订单详情", 10, 20);
-                docPDF.setFontSize(12);
-                docPDF.text("订单号: " + newOrderNumber, 10, 30);
-                docPDF.text("总金额: ¥" + total, 10, 40);
-                docPDF.text("下单时间: " + orderTime, 10, 50);
-                docPDF.text("商品列表:", 10, 60);
-                let yPos = 70;
-                cartItems.forEach((item, i) => {
-                    docPDF.text(`${i+1}. ${item.name} - 数量: ${item.quantity || 1} - ¥${parseFloat(item.price).toFixed(2)}`, 10, yPos);
-                    yPos += 10;
+            // 退出登录
+            document.getElementById("logout-btn").addEventListener("click", function () {
+                signOut(auth).then(() => {
+                    alert("已退出登录！");
+                    window.location.href = "login.html"; // 重定向到登录页
+                }).catch((error) => {
+                    console.error("退出登录错误：", error);
                 });
-                docPDF.save("order_" + newOrderNumber + ".pdf");
+            });
 
-                // ✅ 清空购物车
-                for (let item of cartItems) {
-                    await deleteDoc(doc(db, "carts", currentUser.uid, "items", item.id));
-                }
-
-                alert("订单提交成功！订单号: " + newOrderNumber);
-                loadCart(); // 重新加载购物车
-            } catch (error) {
-                console.error("结算失败：", error);
-                alert("结算失败，请稍后再试！");
-            }
+            loadCart(); // 加载购物车
         });
-
     </script>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            margin: 20px;
+            background-color: #f8f9fa;
+        }
+        h1 {
+            color: #333;
+        }
+        table {
+            width: 80%;
+            margin: 20px auto;
+            border-collapse: collapse;
+            background: white;
+        }
+        th, td {
+            padding: 10px;
+            border: 1px solid #ddd;
+            text-align: center;
+        }
+        th {
+            background-color: #007bff;
+            color: white;
+        }
+        button {
+            padding: 10px;
+            margin: 10px;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+            border-radius: 5px;
+        }
+        #checkout-btn {
+            background: #28a745;
+            color: white;
+        }
+        #logout-btn {
+            background: #dc3545;
+            color: white;
+        }
+        button:hover {
+            opacity: 0.8;
+        }
+    </style>
 </head>
 <body>
     <h1>购物车</h1>
     <table>
+        <thead>
+            <tr>
+                <th>商品名称</th>
+                <th>单价</th>
+                <th>数量</th>
+                <th>总价</th>
+                <th>操作</th>
+            </tr>
+        </thead>
         <tbody id="cart-body"></tbody>
     </table>
     <h3>总金额: ¥<span id="cart-total">0.00</span></h3>
     <button id="checkout-btn">结算</button>
+    <button id="logout-btn">退出登录</button>
 </body>
 </html>
