--- a/cart.html
+++ b/cart.html
@@ -89,55 +89,10 @@
             loadCart(); // 加载购物车
         });
     </script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            margin: 20px;
-            background-color: #f8f9fa;
-        }
-        h1 {
-            color: #333;
-        }
-        table {
-            width: 80%;
-            margin: 20px auto;
-            border-collapse: collapse;
-            background: white;
-        }
-        th, td {
-            padding: 10px;
-            border: 1px solid #ddd;
-            text-align: center;
-        }
-        th {
-            background-color: #007bff;
-            color: white;
-        }
-        button {
-            padding: 10px;
-            margin: 10px;
-            border: none;
-            cursor: pointer;
-            font-size: 16px;
-            border-radius: 5px;
-        }
-        #checkout-btn {
-            background: #28a745;
-            color: white;
-        }
-        #logout-btn {
-            background: #dc3545;
-            color: white;
-        }
-        button:hover {
-            opacity: 0.8;
-        }
-    </style>
 </head>
 <body>
     <h1>购物车</h1>
-    <table>
+    <table border="1">
         <thead>
             <tr>
                 <th>商品名称</th>
